--- a/ng2-ui/src/index.html
+++ b/ng2-ui/src/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Ng2Ui</title>
+  <title>Trouble Maker - Console</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
