--- a/ng2-ui/src/index.html
+++ b/ng2-ui/src/index.html
@@ -7,6 +7,10 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <!-- Bootstrap theme, make things look good -->
+  <link rel="stylesheet" href="./lib/bootstrap-3.3.2/css/bootstrap.min.css" />
+
 </head>
 <body>
   <app-root>Loading...</app-root>
